--- a/views/customers.ejs
+++ b/views/customers.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Customers</title>
-  <link rel="stylesheet" href="/styles.css"> <!-- optional -->
+  <link rel="stylesheet" href="/styles.css"> 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
