--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header class="main-header">
   <div class="logo">
-    <h2>MetroMart <span>🏪</span></h2>
+    <h2><a href="/" style="text-decoration: none; color: inherit;">MetroMart <span>🏪</span></a></h2>
   </div>
   <nav class="nav-links">
     <a href="/">Home</a>
