fix-suppliers-frontend-includes
Signed-off-by: shaxx <mr.shaurya25@gmail.com>

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,7 @@
     <a href="/employees">Employees</a>
     <a href="/departments">Departments</a>
     <a href="/products">Products</a>
+    <a href="/suppliers">Suppliers</a>
     <a href="/customers">Customers</a>
     <a href="/sales">Sales</a>
   </nav>
