--- a/views/suppliers/edit.ejs
+++ b/views/suppliers/edit.ejs
@@ -18,7 +18,7 @@
                         <h2>Edit Supplier</h2>
                     </div>
                     <div class="card-body">
-                        <form action="/suppliers/<%= supplier.supplier_id %>" method="POST">
+                        <form action="/suppliers/<%= supplier.supplier_id %>?_method=PUT" method="POST">
                             <div class="mb-3">
                                 <label for="supplier_name" class="form-label">Supplier Name *</label>
                                 <input type="text" class="form-control" id="supplier_name" name="supplier_name" value="<%= supplier.supplier_name %>" required>
