add-dashboard-view-only
Signed-off-by: shaxx <mr.shaurya25@gmail.com>

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,7 @@
   </div>
   <nav class="nav-links">
     <a href="/">Home</a>
+    <a href="/dashboard">Dashboard</a>
     <a href="/employees">Employees</a>
     <a href="/departments">Departments</a>
     <a href="/products">Products</a>
